# parallel-bfs

./: .gitignore  CMakeLists.txt
data/: RMat5
include/: BFS.h  BitSet.h
lib/: BFS.cpp  BitSet.cpp  CMakeLists.txt
src/: CMakeLists.txt  main.cpp
